# airiskguard-gateway

./: .gitignore  Dockerfile.policy-server  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.db
src/airiskguard_gateway/: auth.py  cli.py  config.py  cost_limits.py  costs.py  license.py  models.py  provider_models.py
src/airiskguard_gateway/audit/: logger.py  shipper.py
src/airiskguard_gateway/policy/: engine.py  models.py  syncer.py
src/airiskguard_gateway/policy_server/: admin_auth.py  database.py  license_state.py  main.py  models.py  schemas.py
src/airiskguard_gateway/policy_server/routers/: dashboard.py  events.py  policies.py  settings.py  teams.py
src/airiskguard_gateway/policy_server/templates/: analytics.html  base.html  cost_cards.html  dashboard.html  login.html  policies.html  providers.html  stats_cards.html  unlicensed.html  users.html  violations.html
src/airiskguard_gateway/proxy/: addon.py  api_server.py  cert.py  provider.py  server.py
src/airiskguard_gateway/routing/: classifier.py  engine.py  models.py  session.py
src/airiskguard_gateway/scanner/: engine.py
src/airiskguard_gateway/scanner/inbound/: vuln_code.py
src/airiskguard_gateway/scanner/outbound/: pii.py  secrets.py
tests/: test_auth.py  test_cost_limits.py  test_costs.py  test_license.py
tests/test_policy/: test_engine.py
tests/test_policy_server/: conftest.py  test_api.py
tests/test_routing/: test_classifier.py  test_engine.py  test_session.py
tests/test_scanner/: test_inbound.py  test_outbound.py
