[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airiskguard"
version = "0.7.0"
description = "AIRiskGuard Gateway — AI traffic management. Route, protect and monitor every AI API call."
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "AIRiskGuard", email = "info@airiskguard.ai" }]
homepage = "https://airiskguard.ai"
repository = "https://github.com/gobeyondfj-cmd/airiskguard-gateway"
keywords = ["ai", "gateway", "proxy", "llm", "routing", "security", "cost", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
]

dependencies = [
    "mitmproxy>=10.3.1",
    "httpx>=0.25.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
airiskguard-gateway = "airiskguard_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airiskguard_gateway"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
